<resources>
    <string name="app_name">Ahorcado</string>

    <!-- Menu principal -->
    <string name="play">JUGAR</string>
    <string name="info">INFORMACION</string>
    <string name="vvGames" translatable="false">VvGames</string>
    <string name="hangMan">AHORCADO</string>
    <string name="MALA" translatable="false">Lara Avila Mauricio Axel</string>

    <!--Content Descriptions -->
    <string name="head" translatable="false">Cabeza</string>
    <string name="bIzq" translatable="false">Brazo Izq</string>
    <string name="bDer" translatable="false">Brazo Der</string>
    <string name="pIzq" translatable="false">Pierna Izq</string>
    <string name="pDer" translatable="false">Pierna Der</string>
    <string name="cuerpo" translatable="false">Cuerpo</string>

    <!--letras-->
    <string name="enie" translatable="false">Ñ</string>
    <string name="letra_a" translatable="false">A</string>
    <string name="vacio" translatable="false">""</string>

    <!-- Juego-->
    <string name="clasico" translatable="false">Clasico</string>
    <string name="winner">Ganaste!! :)</string>
    <string name="playAgain">Jugar de nuevo?</string>
    <string name="loser">Perdiste! :(</string>
    <string name="salir">Menú Principal</string>

    <!--Integers-->
    <integer name="secSplash">2000</integer>
    <integer name="lifes">6</integer>
    <integer name="sizeLetter">28</integer>
    <integer name="sizeLetterIni">1</integer>

    <!--Conexion-->
    <string name="url" translatable="false">https://www.serverbpw.com/cm/2021-1/hangman.php</string>
    <string name="word" translatable="false">word</string>
    <string name="category" translatable="false">category</string>
    <string name="respuesta">"La respuesta era: "</string>

    <!--Integers-->
    <integer name="catorce">14</integer>
    <integer name="uno">1</integer>
    <integer name="cero">0</integer>


</resources>