<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game"
    tools:context=".Hangman">

    <ImageView
        android:id="@+id/ivCuerda"
        android:contentDescription="@string/hangMan"
        android:layout_width="330dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/cuerda" />

    <ImageView
        android:id="@+id/ivHead"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:contentDescription="@string/head"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@drawable/head_1" />

    <ImageView
        android:id="@+id/ivCuerpo"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:contentDescription="@string/cuerpo"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        app:srcCompat="@drawable/body" />

    <ImageView
        android:id="@+id/ivBizq"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:contentDescription="@string/bIzq"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        app:srcCompat="@drawable/arm_left" />

    <ImageView
        android:id="@+id/ivBder"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:contentDescription="@string/bDer"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        app:srcCompat="@drawable/arm_right" />

    <ImageView
        android:id="@+id/ivPizq"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:contentDescription="@string/pIzq"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        app:srcCompat="@drawable/leg_left" />

    <ImageView
        android:id="@+id/ivPder"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:contentDescription="@string/pDer"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        app:srcCompat="@drawable/leg_right" />

    <GridView
        android:id="@+id/gvLetras"
        android:layout_width="355dp"
        android:layout_height="229dp"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="9"
        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llWord"
        app:layout_constraintVertical_bias="0.906" />

    <LinearLayout
        android:id="@+id/llWord"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCuerda"
        app:layout_constraintVertical_bias="0.281"></LinearLayout>

    <TextView
        android:id="@+id/tvClave"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/llWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCuerda"
        app:layout_constraintVertical_bias="0.615" />


</androidx.constraintlayout.widget.ConstraintLayout>